@@ -215,7 +215,7 @@ public class DatabaseCreator {
                         System.err.println("The class must be of SystemIntegrityChecker: " + clazz.getName());
                         System.exit(1);
                     }
-                    SystemIntegrityChecker checker = (SystemIntegrityChecker)clazz.newInstance();
+                    SystemIntegrityChecker checker = (SystemIntegrityChecker)clazz.getDeclaredConstructor().newInstance();
                     checker.check();
                 } catch (ClassNotFoundException e) {
                     System.err.println("Unable to find " + upgradeClass + ": " + e.getMessage());
@@ -225,6 +225,9 @@ public class DatabaseCreator {
                     System.exit(1);
                 } catch (IllegalAccessException e) {
                     System.err.println("Unable to access " + upgradeClass + ": " + e.getMessage());
+                    System.exit(1);
+                } catch (ReflectiveOperationException e) {
+                    System.err.println("Unable to instantiate " + upgradeClass + ": " + e.getMessage());
                     System.exit(1);
                 }
 
