@@ -171,13 +171,10 @@ public class ConsoleProxy {
         try {
             Class<?> clz = Class.forName(factoryClzName);
             try {
-                ConsoleProxyServerFactory factory = (ConsoleProxyServerFactory)clz.newInstance();
+                ConsoleProxyServerFactory factory = (ConsoleProxyServerFactory)clz.getDeclaredConstructor().newInstance();
                 factory.init(ConsoleProxy.ksBits, ConsoleProxy.ksPassword);
                 return factory;
-            } catch (InstantiationException e) {
-                LOGGER.error(e.getMessage(), e);
-                return null;
-            } catch (IllegalAccessException e) {
+            } catch (ReflectiveOperationException e) {
                 LOGGER.error(e.getMessage(), e);
                 return null;
             }
@@ -621,7 +618,7 @@ public class ConsoleProxy {
                 LOGGER.info("Initializing new novnc client and disconnecting existing session");
                 try {
                     ((ConsoleProxyNoVncClient)viewer).getSession().disconnect();
-                } catch (IOException e) {
+                } catch (Exception e) {
                     LOGGER.error("Exception while disconnect session of novnc viewer object: " + viewer, e);
                 }
                 removeViewer(viewer);
